# atlas

./: .gitignore  Cargo.toml  Makefile  README.md  build_debug.sh  build_hot_reload.sh  build_release.sh  flake.nix  main.odin
atlas/: Cargo.toml  main.rs
atlas-config/: Cargo.toml  lib.rs
atlas-engine/: Cargo.toml  buffer.rs  cursor.rs  lib.rs  multi_cursor.rs
atlas-keys/: Cargo.toml  engine.rs  keymap.rs  lib.rs
atlas-vim/: Cargo.toml  keymap.rs  lib.rs  vim.rs
atlas-widgets/: Cargo.toml  editor.rs  lib.rs
clay-odin/: clay.odin
docs/: todo.md
engine/: buffer.odin  engine
linux/: libraylib.so.5.5.0
src/: atlas.odin  buffer.rs  cursor.rs  editor.rs  main.odin  main.rs  vim.rs
src/engine/: buffer.odin  buffer.rs  clay_renderer_raylib.odin  cursor.rs  mod.rs  window.rs  workspace.rs
src/main_hot_reload/: main.odin
src/main_release/: main.odin
src/ui/: editor.rs
