[workspace]
members  = ["atlas", "atlas-config", "atlas-engine", "atlas-keys", "atlas-widgets", "atlas-config"] 
resolver = "3"

[workspace.dependencies]
atlas-engine   = { path = "atlas-engine" }
atlas-keys     = { path = "atlas-keys" }
atlas-widgets  = { path = "atlas-widgets" }
atlas-config   = { path = "atlas-config" }

iced                 = { version = "0.13.1", features = ["canvas", "debug", "advanced"]}
iced_graphics        = "0.13"
ropey                = "1.6.1"
unicode-segmentation = "1.12.0"
unicode-width        = "0.2.0"
